--- a/package.json
+++ b/package.json
@@ -12,20 +12,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.6",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.2",
     "faker": "^5.4.0",
+    "fork": "^1.3.1",
+    "minimist": "^1.2.7",
     "normalizr": "^3.6.2",
     "socket.io": "^4.5.4",
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
-    "connect-mongo": "^4.5.0",
-    "mongoose": "^6.9.0",
-    "cookie-parser": "^1.4.6",
     "bcrypt": "^5.1.0",
+    "connect-mongo": "^4.5.0",
+    "cookie-parser": "^1.4.6",
+    "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
