--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autocannon": "^7.10.0",
+    "compression": "^1.7.4",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.6",
     "express": "^4.18.2",
@@ -19,6 +21,7 @@
     "express-session": "^1.17.2",
     "faker": "^5.4.0",
     "fork": "^1.3.1",
+    "log4js": "^6.8.0",
     "minimist": "^1.2.7",
     "normalizr": "^3.6.2",
     "socket.io": "^4.5.4",
