--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "preentregaproyecto1",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon index.js",
+    "startProf": "0x index.js",
+    "benchmark": "node scripts/benchmark.js"
   },
   "keywords": [],
   "author": "",
