--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
     "start": "node index.js",
+    "test": "mocha test/apimocha.test.js",
     "startProf": "0x index.js",
     "benchmark": "node scripts/benchmark.js"
   },
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "autocannon": "^7.10.0",
+    "axios": "^1.3.4",
     "compression": "^1.7.4",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.6",
@@ -34,6 +35,8 @@
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.5.0",
     "cookie-parser": "^1.4.6",
+    "mocha": "^10.2.0",
+    "chai": "^4.3.7",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
